avoid break inside codesplit pairs

--- a/magicbook/stylesheets/components/codesplit.scss
+++ b/magicbook/stylesheets/components/codesplit.scss
@@ -52,6 +52,7 @@
     display: flex;
     flex-wrap: wrap-reverse;
     justify-content: space-between;
+    break-inside: avoid;
     padding: 0 5mm;
 
     &:first-child {
